Day 2: fix scrollbar on video container

--- a/src/components/Video.css
+++ b/src/components/Video.css
@@ -2,5 +2,6 @@
     height: 100%;
     width: 100%;
     object-fit: fill;
+    scroll-snap-align: start;
     position: relative;
 }
